--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,9 @@
                     <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+        </div>
     </header>
+
     <main>
         <!--FILTER-->
         <section class="filter">
@@ -77,7 +79,6 @@
                                 <h3 class="projects-subtitle">Технокряк</h3>
                                 <p class="projects-text">Веб-сайт</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -90,7 +91,6 @@
                                 </h3>
                                 <p class="projects-text">Дизайн</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -102,7 +102,6 @@
                                 <h3 class="projects-subtitle">Ресторан Seafood</h3>
                                 <p class="projects-text">Додаток</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -112,7 +111,6 @@
                                 <h3 class="projects-subtitle">Проєкт Prime</h3>
                                 <p class="projects-text">Маркетинг</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -122,7 +120,6 @@
                                 <h3 class="projects-subtitle">Проєкт Boxes</h3>
                                 <p class="projects-text">Додаток</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -132,7 +129,6 @@
                                 <h3 class="projects-subtitle">Inspiration has no Borders</h3>
                                 <p class="projects-text">Веб-сайт</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -144,7 +140,6 @@
                                 <h3 class="projects-subtitle">Видання Limited Edition</h3>
                                 <p class="projects-text">Дизайн</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -154,7 +149,6 @@
                                 <h3 class="projects-subtitle">Проєкт LAB</h3>
                                 <p class="projects-text">Маркетинг</p>
                             </div>
-
                         </a>
                     </li>
                     <li class="projects-item">
@@ -166,7 +160,6 @@
                                 <h3 class="projects-subtitle">Growing Business</h3>
                                 <p class="projects-text">Додаток</p>
                             </div>
-
                         </a>
                     </li>
                 </ul>
