--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   </header>
   <main>
     <!--HERO-->
-    <div>
-      <section class="hero">
+    <section class="hero">
+      <div class="container hero-container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-btn" type="button">Замовити послугу</button>
-      </section>
-    </div>
+      </div>
+    </section>
     <!--FEATURES-->
     <section class="features">
       <div class="container features-container">
