--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,10 @@
     </header>
 
     <main>
-        <!--FILTER-->
-        <section class="filter">
-            <div class="container filter-container">
-                <h1 class="filter-title">Фільтр</h1>
+        <!--PORTFOLIO-->
+        <section class="projects">
+            <div class="container projects-container">
+                <h1 class="projects-title">Портфоліо</h1>
                 <ul class="filter-list">
                     <li class="filter-item">
                         <button class="filter-btn" type="button">Усі</button>
@@ -62,9 +62,6 @@
                         <button class="filter-btn" type="button">Маркетинг</button>
                     </li>
                 </ul>
-
-                <!-- PROJECTS -->
-                <h2 class="projects-title">Приклади робіт</h2>
                 <ul class="projects-list">
                     <li class="projects-item">
                         <a class="project-link" href="#">
